chore: добавлен .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,22 @@
 
-# Xcode user data
+# Xcode
 *.xcuserstate
-*.xcworkspace
-*.xccheckout
 *.xcscmblueprint
-*.xcsettings
-*.xcodeproj/project.xcworkspace/
-*.xcodeproj/xcuserdata/
-*.xcodeproj/xcshareddata/xcschemes/*User*.xcscheme
+*.xccheckout
+*.xcodeproj/project.xcworkspace/xcuserdata
+*.xcodeproj/xcuserdata
+*.xcodeproj/xcshareddata/WorkspaceSettings.xcsettings
+*.xcworkspace/xcuserdata
+*.xcworkspace/xcshareddata
+
+# macOS system files
+.DS_Store
+
+# Breakpoints
+*.xcuserdatad/xcdebugger/*
+*.xcuserdatad/xcschemes/*
+
+# SwiftPM & Derived Data
+.build/
+DerivedData/
 
